--- a/index-Page2.html
+++ b/index-Page2.html
@@ -10,7 +10,7 @@
 </body>
 <body>
 
-	<a href="file:///C:/Users/User/Desktop/Phoenix_Arts/index.html" target=_self title="Link ig">
+	<a href="http://phoenixarts.shop/" target=_self title="Link ig">
 		<button style="background-color:green;border-radius:5px"<h1>Phoenix Arts</h1></button>
 	</a>
 </body>
