--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </body>
 <body>
 
-	<a href="file:///C:/Users/User/Desktop/Phoenix_Arts/index-Page2.html" target=_self title="Link ig">
+	<a href="index-Page2.html" target=_self title="Link ig">
 		<button style="background-color:#ff550b;border-radius:5px"<h1>Phoenix Arts</h1></button>
 	</a>
 </body>
