--- a/index-Page2.html
+++ b/index-Page2.html
@@ -10,9 +10,11 @@
 </body>
 <body>
 
+	 <div id="box1">
 	<a href="index.html" target=_self title="Link ig">
 		<button style="background-color:green;border-radius:5px"<h1>Phoenix Arts</h1></button>
 	</a>
+	 </div>
 </body>
 </html>
 
@@ -22,7 +24,13 @@
 
 
 
-
+#box1{
+	border:5px solid;
+	width: 500;
+	height: 250;
+	font-size: 25px;
+	background: blue;
+	 }
 
 
 
