--- a/index-Page2.html
+++ b/index-Page2.html
@@ -5,7 +5,7 @@
 	<title>PhoenixArts Page 2</title>
 </head>
 <body>
- <h1><style="color: red"> Hello welcome to <b>my website</b></h1>
+ <style="color: red"> Hello welcome to <b>my website</b>
 <hr>
 </body>
 <body>
