--- a/index-Page2.html
+++ b/index-Page2.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>PhoenixArts Page 2</title>
+	<title>PhoenixArts&copy;</title>
 </head>
 <body>
  <style="color: red"> Hello welcome to <b>my website</b>
