--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 	</head>
 	
 <p>
+	<div id="box1">
 	<h1>James</h1>
 
 May 5 3:54 AM
 Test 354-4M James proclaims as he waits for the minutes to pass. The Blade loud hums fill the room as Mark waits to power up <u>the Blade</u>. 5:00 AM Test 500-4M! James loudly says as Mark powers on the Blade *tick*, and just like that the lights glow a bright beautiful blue and then the lights burn out. The Blade GLOWS in a bright- No sun-like bright that is also chilling to the eye, James the lead scientist cries tears of joy as Mark jumps up in the air yell to the top of his lungs, James tries to touch the Blade and stops before a shockwave of ice and snow freezing half the room in ice, Mark looks in amazement, James does too. James tries one more time to grab the handle and as he does his body is covered in ice-like armor, James lets go of the Blade and before it falls onto the floor it hovers, the floor freezes. James picks up the Blade and says I got an idea, maybe if I think about- James’s hair turns to ice, then James says “This can be used to imprison the powered individuals” Mark looks at James and says “We can end living in fear of the empowered” James looks up at Mark with sadness and fear in his eyes and says “Mark, we can’t just kill people!” James proclaims loudly, Mark fires back with” James your mother is dying in her bed because of them!” Mark yells, he yells so loud they heard him through the halls, echoing. James yells back” Don’t talk about my mother, that may be true but we don’t have to bring up the past” James claims calmly as Mark gets madder by the second and then James asks”Mark why are you so mad? What have they done to you?” James asks with each breath his voice breaks a little, Mark’s face is red and ready to kill James, Mark runs to the Blade and- and- AND STABS JAMES IN HIS CHEST WITH THE BLADE, then runs away with the chill blade. James lays there on the floor in a pool of icy blood? James blacks out. James awakes at 10:51 AM, James gets up and looks around the room, covered in thick layer of ice and snow, he looks at the time and walks up to the door and tries to open it but it doesn’t work, and with one push the door is off its hinges, James runs and- he hits a wall “super speed” James loudly proclaims, He runs and everything begins to become slower and he runs outside the build and stops right outside the Large gray building, buildings towers covering the skies. </p> <p> And on those very large screens that say in very very <b>Very Large words</b>” James A. Janisse The Most Wanted Man In The World '' James looks in fear and sadness asking himself why would Mark do this to me? Then he remembers that he is out in the open as the police are already around him he jumps and snowflakes fall from his body then a bright light surrounds him and he zooms off, they look confused. James zooms out of the city and then he falls, slowly and lands in the desert, the sand freezes when James walks across it, James finds a cave and hides and as he does so he hears jets zoom past his cave, James tries to learn his power and it only took the day, May 6 5:00 AM “Time stop!” James loudly proclaims as time starts to stop, James picks some sand and lets it fall out his sand then, it falls and begins to slow down, James’s eyes lights up in amazement as the sand starts to fall again and time goes forward, 
-
+</div>
 </p>
 
 	
@@ -37,7 +38,7 @@ Test 354-4M James proclaims as he waits for the minutes to pass. The Blade loud 
 
 
 
-
+<! - -water- -/>
 
 
 
