--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	
-	<a href="index-Page2.html" target=_self title="Link ig">
+	<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target=_self title="Link ig">
 		<button style="background-color:#ff550b;border-radius:5px"<h1>Phoenix Arts</h1></button>
 	
 	</a>
