--- a/index-page2.html
+++ b/index-page2.html
@@ -5,18 +5,109 @@
 	<title>PhoenixArts&copy;</title>
 </head>
 <body>
- <style="color: red"> Hello welcome to <b>my website</b>
+ <h1>Hello welcome to my website</h1>
 <hr>
 </body>
 <body>
 
-	
-	<a href="index.html" target=_self title="Link ig">
-		<button style="background-color:white;border-radius:10px"<h1>Phoenix Arts</h1></button>
+	<a href="index.html" target=_self title="Link to page1">
+		<button style="background-color:rgb(255, 255, 255);border-radius:10px"<h1>Back to page</h1></button>
 	</a>
-	 
+
+
+
+	<style>
+	
+	
+		button {
+	
+			font-size: 40px;
+			padding: 10px;
+			border-radius: 10px;
+			margin: 20px;
+			font-family: 'Times New Roman', Times, serif;
+			
+	
+	
+	
+		}
+		#container
+	{
+		text-align: left;
+		
+		
+		
+	
+	
+		
+	}
+		</style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
+
 
 
 
