--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 
-	<a href="index.html" target=_self title="Link to page2">
+	<a href="index.Page2.html" target=_self title="Link to page2">
 		<button style="background-color:#ffffff;border-radius: 10px;"<h1>Next Page</h1></button>
 	</a>	
 
