--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="widtth=device-width, inscale=1">
 </head>
 <body>
-<h1>Hello welcome to my website</h1>
+<h1>Home Page</h1>
 <hr>
 
 	
@@ -39,7 +39,7 @@
 
 
 
-	<a href="index.page2.html" target=_self title="Link to page2">
+	<a href="index.Page2.html" target=_self title="Link to page2">
 		<button style="background-color:#ffffff;border-radius: 10px;"<h1>Next Page</h1></button>
 	</a>	
 
@@ -55,27 +55,42 @@
 		border-radius: 10px;
 		margin: 20px;
 		font-family: 'Times New Roman', Times, serif;
-		
-
-
- 
+		text-align: center;
 	}
+
+
+
+	
 
 	</style>
 
-<div class="wrapper">
-	<div class="logo">
-			
+
+
+
+
+<body>
+		 
+		<div class="wrapper"
+		<div class="logo"
+			<img src="Arts/Sketch001.png"
 			</div>
-		<ul class="nav-area">
-			<li><a href="index.Page3.html"><article>Art Page</article></a></li>
+			<ul class="nav-area"></ul>
+
+				<li><a href="index.Home.html">Home</a></ul></li>
+				<li><a href="index.About.html">About</a></ul></li>		
+				<li><a href="index.Services.html">Services</a></ul></li>		
+				<li><a href="index.Portfolio.html">Portfolio</a></ul></li>
+				
+			</ul>
+		</div>
+
+		
 
 
 
 
-		</ul>
-	</div>
 
+	</body>
 
 
 
