--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</div>
 			<ul class="nav-area"></ul>
 
-				<li><a href="index.community.html">Home</a></ul></li>
+				<li><a href="index.Home.html">Community</a></ul></li>
 				<li><a href="index.About.html">About</a></ul></li>		
 				<li><a href="index.Services.html">Services</a></ul></li>		
 				<li><a href="index.Portfolio.html">Portfolio</a></ul></li>
