--- a/index.About.html
+++ b/index.About.html
@@ -8,6 +8,7 @@
     <br>Q: What can you do on the website<br>A: Post art chating talking to friends and making your own community(if you need
     any help on making a website just ask me At PhoenixArts@gmail.com) </p>
 
+<li><a href="index.html">Home</a></ul></li>
 
 
 
