--- a/index.Home.html
+++ b/index.Home.html
@@ -4,7 +4,8 @@
     <body>
 
 <h1>This is my community page</h1>
-<p>This page is for community</p>
+<p>This page is for community, right now there is nothing but, soon there will be. I'll try to update
+    <br> the site everyday or week adding new things and fixing bugs.</p>
 
 <div class="wrapper"
 		<div class="logo"
