--- a/index.About.html
+++ b/index.About.html
@@ -6,15 +6,8 @@
     this page can help. This website is for our community to grow and if they have anything questions I(we) <br>
     can answer them together.<br></br>Q: What is your website about?<br>A: To post my art and make a community
     <br>Q: What can you do on the website<br>A: Post art chating talking to friends and making your own community(if you need
-    any help on making a website just ask me At PhoenixArts@gmail.com) </p>
-
-<li><a href="index.html">Home</a></ul></li>
-
+    any help on making a website just ask me At phoenixartsshop@gmail.com) </p>
+<! - - No more questions - - -/>
 
 
-
-
-
-
-
- 
+    <li><a href="index.html">Home</a></ul></li>
