--- a/index.page2.html
+++ b/index.page2.html
@@ -5,8 +5,10 @@
 	<title>PhoenixArts&copy;</title>
 </head>
 <body>
- <h1>Hello welcome to my website</h1>
+ <h1>This is page 2</h1>
 <hr>
+	<p>This page is a placeholder(use f12 on this page)</p>
+	<! - -Hello if you see this, Reload the page- -/>
 </body>
 <body>
 
