--- a/index.page2.html
+++ b/index.page2.html
@@ -7,7 +7,7 @@
 <body>
  <h1>This is page 2</h1>
 <hr>
-	<p>This page is a placeholder(use f12 on this page)</p>
+	<p>This page is a placeholder</p>
 	<! - -Hello if you see this, copy and paste this link: https://www.youtube.com/watch?v=dQw4w9WgXcQ- -/>
 </body>
 <body>
