--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 
-<! - - Add cool looking buttons - - />
+<! - - Add cool looking buttons and more later - - />
 
 
 
@@ -40,10 +40,12 @@
 
 
 	<a href="index.page2.html" target=_self title="Link to page2">
-		<button style="background-color:#ffffff;border-radius: 10px;"<h1>Next Page</h1></button>
+		<button style="background-color:#ffffff;border-radius: 100px;"<h1>Next Page</h1></button>
 	</a>	
 
-
+	<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target=_self title="button">
+		<button style="background-color:#edfffe;border-radius: 100px;"<h1>Placeholer</h1></button>
+	</a>	
 
 <style>
 	
