--- a/index.About.html
+++ b/index.About.html
@@ -7,7 +7,7 @@
     can answer them together.<br></br>Q: What is your website about?<br>A: To post my art and make a community
     <br>Q: What can you do on the website<br>A: Post art chating talking to friends and making your own community(if you need
     any help on making a website just ask me At phoenixartsshop@gmail.com) </p>
-    <br>Q: What didy ou make this for?<br>A: Just for fun.
+    Q: What did you make this for?<br>A: Just for fun.
 
 <! - - Why did they asked more questions - - -/>
 
