--- a/index.html
+++ b/index.html
@@ -25,26 +25,22 @@
 
 
 
+ 
 
 
 
 
 
 
-
-<! - - Add cool looking buttons and more later - - />
-
+<! - - New updates - - />
 
 
 
 
 
-	<a href="index.page2.html" target=_self title="Link to page2">
-		<button style="background-color:#ffffff;border-radius: 100px;"<h1>Next Page</h1></button>
-	</a>	
 
-	<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target=_self title="button">
-		<button style="background-color:#edfffe;border-radius: 100px;"<h1>Placeholer</h1></button>
+	<a href="index.Page2.html" target=_self title="Link to page2">
+		<button style="background-color:#ffffff2a;border-radius: 100px;"<h1>Next Page</h1></button>
 	</a>	
 
 <style>
@@ -71,22 +67,18 @@
 
 
 <body>
-		 
-		<div class="wrapper"
-		<div class="logo"
-			<img src="Arts/Sketch001.png"
-			</div>
+		
 			<ul class="nav-area"></ul>
 
-				<li><a href="index.Home.html">Community</a></ul></li>
+				<li><a href="index.Home.html">community</a></ul></li>
 				<li><a href="index.About.html">About</a></ul></li>		
 				<li><a href="index.Services.html">Services</a></ul></li>		
 				<li><a href="index.Portfolio.html">Portfolio</a></ul></li>
-				
+
 			</ul>
 		</div>
-
-		
+			<r>
+		<li><a href="index.Story.html">Story Line</a></ul></li>
 
 
 
@@ -102,20 +94,35 @@
 
 
 
+<br>
+<br>
+	<br>
+	<br>
+<br>
+<br>
+	<br>
+	<br>
+	<br>
+	<br>
+<br>
+<br>
+	<br>
+	<br>
+	<br>
+	<br>
+<br>
+<br>
 
+	<br>
+	<br>
+	<br>
+	<br>
+<br>
+<br>
+		<div id="Updates">
+	<li><a href="index.Updates.html"><u>0.0.0</u></a></ul></li>
 
-
-
-
-
-
-
-
-
-
-
-
-
+	
 
 
 
