--- a/index.Page2.html
+++ b/index.Page2.html
@@ -5,44 +5,30 @@
 	<title>PhoenixArts&copy;</title>
 </head>
 <body>
- <h1>This is page 2</h1>
+ <h1>Hello welcome to my website</h1>
 <hr>
-	<p>This page is a placeholder</p>
-	<! - -Hello if you see this, copy and paste this link: https://www.youtube.com/watch?v=dQw4w9WgXcQ- -/>
 </body>
 <body>
 
+
 	<a href="index.html" target=_self title="Link to page1">
-		<button style="background-color:rgb(255, 255, 255);border-radius:10px"<h1>Back to page</h1></button>
-	</a>
+		<button style="background-color:#ffffff2a;border-radius: 100px;"<h1>Back to page</h1></button>
+	</a>	
 
+<style>
+	
+	
+	button {
 
-
-	<style>
-	
-	
-		button {
-	
-			font-size: 40px;
-			padding: 10px;
-			border-radius: 100px;
-			margin: 20px;
-			font-family: 'Times New Roman', Times, serif;
-			
-	
-	
-	
-		}
-		#container
-	{
-		text-align: left;
-		
-		
-		
-	
-	
-		
+		font-size: 40px;
+		padding: 10px;
+		border-radius: 10px;
+		margin: 20px;
+		font-family: 'Times New Roman', Times, serif;
+		text-align: center;
 	}
+
+
 		</style>
 
 
