--- a/index.s1.html
+++ b/index.s1.html
@@ -9,7 +9,15 @@
         <p>In the beginning there were nothing and then everything. Color filled the black cold nothing nothingness<br>
         of space, and with that color there were one thing, a thing that holds power, power everything and anyone wants<br>
         <b>It</b>. This thing no this force of nature, <b>a crystal-like rock light pink or magenta in color</b>. This crystal-like rock floated <br>
-        </p>
+        in space for thousands of millions of years waiting in a deep sleep Unit, it hit earth. Covered in rocks and ice it hit the earth<br>
+        65,000,000 years ago, starting a ice age with it's impact and, for millions it slept to be awakened. <br>
+        Unit, it was in the year 200 it was found in thousands layers of stone smaller but powerful if used correctly can create and destory<br>
+        the crystal is so powerful that it can make anyone the most powerful man in the <b>UNVIERSE</b>.The crystal was passed<br>
+        down througth out generations to father to son, mother to dagther, "the powerful family in the world" the people would say<br>
+        but they didn't know the truth about why they were so powerful, they were so powerful because they shared their power equality<br> 
+        to everyone in their family. They didn't know one thing about the crystal it could copy <b>anything</b> the crystalcould look<br>
+        like anyone or anything, the crystal gained knowledge of the millions of years and it <b>Never Forgot</b> it heard everything and it knew things<br>
+            things no man should know the crystal has gained so much but also lost so much <b>POWER</b>, it was back</p>
 
 
 
