--- a/index.s1.html
+++ b/index.s1.html
@@ -17,10 +17,20 @@
         but they didn't know the truth about why they were so powerful, they were so powerful because they shared their power equality<br> 
         to everyone in their family. They didn't know one thing about the crystal it could copy <b>anything</b> the crystalcould look<br>
         like anyone or anything, the crystal gained knowledge of the millions of years and it <b>Never Forgot</b> it heard everything and it knew things<br>
-            things no man should know the crystal has gained so much but also lost so much <b>POWER</b>, it was back</p>
+            things no man should know the crystal has gained so much but also lost so much <b>POWER</b>, the power that was stolen for it<br>
+            and for that reason it's anger grows. And one day it stopped waiting, then the family shared the power the crystal had a plan<br>
+        and the plan was to take their blood in their body's and expland it and heat to make them <b>POP<b> like h̷͎͍̋e̴͖͠ has seen before by many of their family<br>
+        has done to many others before. And then h̷͎͍̋e̴͖͠ thougth h̷͎͍̋e̴͖͠ won, a loud group of people laughing walks in the room, it no, h̷͎͍̋e̴͖͠ thougth this will be the end<br>
+        for them but, no it wasn't they hid and used copies to fake their own deaths and now they knew that it-h̷͎͍̋e̴͖͠ was too powerful and then. They didn't exist<br>
+        h̷͎͍̋e̴͖͠ was so powerful that it had euogh<! - -  SGUgc2VlcyBhbGw=
+SGUga25vd3MgYWxs
+SGUgdGVsbHMgYWxs
+SGUgaGVhcnMgbm8gZXZpbCwgc2VlIG5vIGV2aWwgYW5kLCBrbm93cyBhbGwgZXZpbA==- -/>and know it wants more, more power.</p>
 
 
-
+            <p>"End of a start of a story."
+                        Page 1 
+                           <b>This will have more story to it in the futur sorry for the quick read<b>.</p>
 
 
 
