--- a/index.Updates.html
+++ b/index.Updates.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <! - -Updates will be here soon- - />
-No updates yet
 
-
-
+<li><b>-0.0.1<b></li>
+  Added <a href="index.Story.html">Story Line</a> Now i can show the world my ideas and soul, my creation of story!
 
 
 
