--- a/index.s1.html
+++ b/index.s1.html
@@ -22,7 +22,7 @@
         and the plan was to take their blood in their body's and expland it and heat to make them <b>POP<b> like h̷͎͍̋e̴͖͠ has seen before by many of their family<br>
         has done to many others before. And then h̷͎͍̋e̴͖͠ thougth h̷͎͍̋e̴͖͠ won, a loud group of people laughing walks in the room, it no, h̷͎͍̋e̴͖͠ thougth this will be the end<br>
         for them but, no it wasn't they hid and used copies to fake their own deaths and now they knew that it-h̷͎͍̋e̴͖͠ was too powerful and then. They didn't exist<br>
-        h̷͎͍̋e̴͖͠ was so powerful that it had euogh<! - -  SGUgc2VlcyBhbGw=
+        h̷͎͍̋e̴͖͠ was so powerful that it had enough<! - -  SGUgc2VlcyBhbGw=
 SGUga25vd3MgYWxs
 SGUgdGVsbHMgYWxs
 SGUgaGVhcnMgbm8gZXZpbCwgc2VlIG5vIGV2aWwgYW5kLCBrbm93cyBhbGwgZXZpbA==- -/>and know it wants more, more power.</p>
