--- a/Ep_1.html
+++ b/Ep_1.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
     <head>
         <body>
-            <title>The Elemental</title>
+            <title>Episode 1 THE Elemental</title>
             <h1>The beginning</h1>
+            <h3>The Elemental</h3>
             <hr>
             <li><a href="index.html">Home Page</a></ul></li>
             <br>
