--- a/index.Story.html
+++ b/index.Story.html
@@ -20,9 +20,9 @@ Anyways the start of the universe. </p>
         <ul class="nav-area"></ul>
 
             <li><a href="index.s1.html">The Elemental</a></ul></li>
-            <li><a href="index.s2.html">The Elemental's creation</a></ul></li>		
-            <li><a href="index.s3.html">Elementals live on</a></ul></li>		
-            <li><a href="index.s4.html">Renaissance</a></ul></li>
+            <li><a href="index.s2.html">Elementals </a></ul></li>		
+            <li><a href="index.s3.html">The New Elementals</a></ul></li>		
+            <li><a href="index.s4.html">New Renaissance</a></ul></li>
 
         </ul>
     </div>
