--- a/index.Story.html
+++ b/index.Story.html
@@ -19,10 +19,10 @@ Anyways the start of the universe. </p>
     
         <ul class="nav-area"></ul>
 
-            <li><a href="index.s1.html">The Elemental</a></ul></li>
-            <li><a href="index.s2.html">Elementals </a></ul></li>		
-            <li><a href="index.s3.html">The New Elementals</a></ul></li>		
-            <li><a href="index.s4.html">New Renaissance</a></ul></li>
+	<li><a href="index.s1.html"><h3>The Elemental</h3></a></ul></li>
+	<li><a href="index.s2.html"><h3>Elementals</h3></a></ul></li>		
+	<li><a href="index.s3.html"><h3>The New Elementals</h3></a></ul></li>		
+	<li><a href="index.s4.html"><h3>New Renaissance</h3></a></ul></li>
 
         </ul>
     </div>
