--- a/index.s1.html
+++ b/index.s1.html
@@ -6,8 +6,8 @@
 		<button style="background-color:#ffffff2a;border-radius: 100px;"<h1>Next Page</h1></button>
 	</a>	
 
-				<li><a href="Ep_1.html">Episode 1</a></ul></li>
-                <li><a href="Ep_2.html">Episode 2</a></ul></li>
+<li><a href="Ep_1.html"><h3>Episode 1</h3></a></ul></li>
+<li><a href="Ep_2.html"><h3>Episode 2</h3></a></ul></li>
 
 
 
