--- a/Ep_1.html
+++ b/Ep_1.html
@@ -33,7 +33,9 @@ SGUgaGVhcnMgbm8gZXZpbCwgc2VlIG5vIGV2aWwgYW5kLCBrbm93cyBhbGwgZXZpbA==- -/>and kno
                         Page 1 
                            <b>This will have more story to it in the futur sorry for the quick read<b>.</p>
 
-
+<a href="Ep_1-1.html" target=_self title="Page 2">
+		<button style="background-color:#ffffff2a;border-radius: 100px;"<h1>Next Page</h1></button>
+	</a>	
 
 
 
