--- a/Ep_1-1.html
+++ b/Ep_1-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
  <head>
         <body>
-            <title>Episode 1 THE Elemental</title>
+            <title>Episode 2 THE Elemental</title>
             <h1>The end</h1>
             <h3>The Elemental</h3>
             <hr>
@@ -9,7 +9,10 @@
           </head>
    </body>
 
-<p></p>
+<p><h4>A</h4>fter The elemental won and gone It's<!-his-/> power back<!-He-/>It power HE can do anything He wants<br>
+Changing anything at will He<!-I-/> gave HimSelf a form, hiding the rhombus shaped ligth magenta crystal in His chest<br>
+He looks around the now empty room He walks out of the room to see a home a nice looking one, "better then a <u>Cold, sad</u> room<br>
+that <u>I</u> stayed in for all those years" He </p>
 
 
 
@@ -27,7 +30,7 @@
 <a href="Ep_1.html" target=_self title="Link to page2">
 		<button style="background-color:#ffffff2a;border-radius: 100px;"<h1>Back Page</h1></button>
 	</a>	
-
+<br>
 <a href="Ep_1-2.html" target=_self title="Link to page2">
 		<button style="background-color:#ffffff2a;border-radius: 100px;"<h1>next page Page</h1></button>
 	</a>	
