--- a/Ep_1-1.html
+++ b/Ep_1-1.html
@@ -12,7 +12,18 @@
 <p><h4>A</h4>fter The elemental won and gone It's<!-his-/> power back<!-He-/>It power HE can do anything He wants<br>
 Changing anything at will He<!-I-/> gave HimSelf a form, hiding the rhombus shaped ligth magenta crystal in His chest<br>
 He looks around the now empty room He walks out of the room to see a home a nice looking one, "better then a <u>Cold, sad</u> room<br>
-that <u>I</u> stayed in for all those years" He </p>
+that <u>I</u> stayed in for all those years" He thought to himself and then he luaghed. hE walked out of the house to see a bigger room<br>
+,no a bigger building then he walked tot the window and saw a big colorful city *ding!* He looked at the soure of the sound and he saw the<br>
+wall split apart and men dressed in all black suits walked in and gave him clothes, He looked at them with confusionand they said that he is safe<br>
+now and then, a women in all white with hints of gold walk up to him and said "Hello I am- call me-" She was to stunned to speak<br>
+then he said "Are you ok?" he said then she helded out her hand and then she said"I AM Mary, Mary b. Jonson"she said with a bright smlie<br>
+on her face, "so what is your name?" she said and he said "I don't have no Yet" he said still looking confused, then She said"Follow us we'll save you<br>
+from this cold souless place" then they went out of the building and went to a bigger building also white and gold just like her suit<br>
+also,he tried to ask for other cloths, because the white and gold dosen't really fit his brand he thought to himself happly and then he said"Umm yo,<br>
+can i get some different cloths?" he said with a smlie and she replied with"No, sorry we don't have anymore cloths for you to wear" she said with a smlie<br>
+He felt upset and looked at her like was crazy and said"You know we just pasted the mall, right?"he said "Yes but, we can't turn around or have you out of MY-<br>
+and before she could a word- wait how dose he know about a mall? Did he read there minds? Anyways, before she could a word he was gone and he was in the<br>
+mall looking for new clothes</p> 
 
 
 
