--- a/Ep_1-1.html
+++ b/Ep_1-1.html
@@ -21,9 +21,9 @@ on her face, "so what is your name?" she said and he said "I don't have no Yet" 
 from this cold souless place" then they went out of the building and went to a bigger building also white and gold just like her suit<br>
 also,he tried to ask for other cloths, because the white and gold dosen't really fit his brand he thought to himself happly and then he said"Umm yo,<br>
 can i get some different cloths?" he said with a smlie and she replied with"No, sorry we don't have anymore cloths for you to wear" she said with a smlie<br>
-He felt upset and looked at her like was crazy and said"You know we just pasted the mall, right?"he said "Yes but, we can't turn around or have you out of MY-<br>
-and before she could a word- wait how dose he know about a mall? Did he read there minds? Anyways, before she could a word he was gone and he was in the<br>
-mall looking for new clothes</p> 
+He felt upset and looked at her like was crazy and said"You know we just pasted the mall, right?"he said "Yes but, we can't turn around or 
+have you out of MY and before she could a word- wait how dose he know about a mall? Did he read there minds? Anyways, before she could a word 
+he was gone and he was in the mall looking for new clothes</p> 
 
 
 
