--- a/Ep_1-1.html
+++ b/Ep_1-1.html
@@ -9,7 +9,7 @@
           </head>
    </body>
 
-After The elemental won and gone It's<!-his-/> power back<!-He-/>It power HE can do anything He wants<br>
+After The elemental won,it wants It's<!-his-/> power back<!-He-/>.With power HE can do anything He wants<br>
 Changing anything at will He<!-I-/> gave HimSelf a form, hiding the rhombus shaped ligth magenta crystal in His chest<br>
 He looks around the now empty room He walks out of the room to see a home a nice looking one, "better then a <u>Cold, sad</u> room<br>
 that <u>I</u> stayed in for all those years" He thought to himself and then he luaghed. hE walked out of the house to see a bigger room<br>
