--- a/Ep_1-1.html
+++ b/Ep_1-1.html
@@ -23,7 +23,14 @@ also,he tried to ask for other cloths, because the white and gold dosen't really
 can i get some different cloths?" he said with a smlie and she replied with"No, sorry we don't have anymore cloths for you to wear" she said with a smlie<br>
 He felt upset and looked at her like was crazy and said"You know we just pasted the mall, right?"he said "Yes but, we can't turn around or<br>
 have you out of MY and before she could a word- wait how dose he know about a mall? Did he read there minds? Anyways, before she could a word <br>
-he was gone and he was in the mall looking for new clothes, walking around the big colorful mall he finds a store full of clothes, colorful and <<br>/p> 
+he was gone and he was in the mall looking for new clothes, walking around the big colorful mall he finds a store full of clothes, colorful<br>
+and glowing. The clothesin the store made his eyes glow, he ran in the store with a smile on his face and putted our some clothes he liked<br>
+After 3 minutes, they took all the clothes put one, <b>a teal T-shirt with orange sleeves and picture of a iron mango, and blue shorts</b> why this?<br>
+I am writing this by memory and adding some new things to the story so yeah, this is what he wearing for like the whole story, don't ask why.<br>
+Anyways, He dosen't care because he has different clothes"where is the suit" Mary asked with sadness "I it a thing" he said with a smile on his face,<br>
+Mary looked upset but he didn't care he wasn't going to let <u>ANYONE</u> use him anymore millions of years of just watching everything change and go by,<br>
+A kid to teen to adut to father, Father to son, son to king, king to daugther, queen to son, Son to king. He have seen everything. He has seen things no man,<br>
+No one to see "I have seen young men use my power to be come gods"  </p> 
 
 
 
