--- a/Ep_1-1.html
+++ b/Ep_1-1.html
@@ -30,11 +30,14 @@ I am writing this by memory and adding some new things to the story so yeah, thi
 Anyways, He dosen't care because he has different clothes"where is the suit" Mary asked with sadness "I it a thing" he said with a smile on his face,<br>
 Mary looked upset but he didn't care he wasn't going to let <u>ANYONE</u> use him anymore millions of years of just watching everything change and go by,<br>
 A kid to teen to adut to father, Father to son, son to king, king to daugther, queen to son, Son to king. He have seen everything. He has seen things no man,<br>
-No one to see "I have seen young men use my power to be come gods"  </p> 
+No one to see "I have seen young men use my power to be come gods" "what is your name or, have came up with a name yet?" Mary asked he replied"No, I haven't<br>
+But I have thougth about one" He said with glee "James-" he stopped himself and said "wait, I can control anything like the elemets" he remebed "The Elemetal"<br>
+He said with a odd look his face "what is that?" The Elemetal wonder to himself "that is Tourmaline, a typeof crystal" c"ool but why do people crystals?"
+he said.</p> 
 
 
-
-
+"The end to the begging"
+	More coming soon
 
 
 
