--- a/Ep_1-1.html
+++ b/Ep_1-1.html
@@ -6,6 +6,8 @@
             <h3>The Elemental</h3>
             <hr>
 
+		<meta charset="utf-8"
+		<meta name="viewport" content="widtth=device-width, inscale=1">
           </head>
    </body>
 
