--- a/Ep_1.html
+++ b/Ep_1.html
@@ -5,6 +5,9 @@
             <h1>The beginning</h1>
             <h3>The Elemental</h3>
             <hr>
+		
+		<meta charset="utf-8"
+		<meta name="viewport" content="widtth=device-width, inscale=1">
             <li><a href="index.html">Home Page</a></ul></li>
             <br>
         <p>In the beginning there were nothing and then everything. Color filled the black cold nothing nothingness<br>
