--- a/index.s1.html
+++ b/index.s1.html
@@ -6,6 +6,9 @@
 		<button style="background-color:#ffffff2a;border-radius: 100px;"<h1>Next Page</h1></button>
 	</a>	
 
+		<meta charset="utf-8"
+		<meta name="viewport" content="widtth=device-width, inscale=1">
+
 <li><a href="Ep_1.html"><h3>Episode 1</h3></a></ul></li>
 <li><a href="Ep_2.html"><h3>Episode 2</h3></a></ul></li>
 
