--- a/index.s1.html
+++ b/index.s1.html
@@ -8,10 +8,10 @@
 
 		<meta charset="utf-8"
 		<meta name="viewport" content="widtth=device-width, inscale=1">
-
-<li><a href="Ep_1.html"><h3>Episode 1</h3></a></ul></li>
-<li><a href="Ep_2.html"><h3>Episode 2</h3></a></ul></li>
-
+<ul>
+<li><a href="Ep_1.html"><h3>Episode 1</h3></a></li>
+<li><a href="Ep_2.html"><h3>Episode 2</h3></a></li>
+</ul>
 
 
 
