--- a/Ep_1.html
+++ b/Ep_1.html
@@ -10,26 +10,25 @@
 		<meta name="viewport" content="widtth=device-width, inscale=1">
             <li><a href="index.html">Home Page</a></ul></li>
             <br>
-        <p>In the beginning there were nothing and then everything. Color filled the black cold nothing nothingness<br>
-        of space, and with that color there were one thing, a thing that holds power, power everything and anyone wants<br>
-        <b>It</b>. This thing no this force of nature, <b>a crystal-like rock light pink or magenta in color</b>. This crystal-like rock floated <br>
-        in space for thousands of millions of years waiting in a deep sleep Unit, it hit earth. Covered in rocks and ice it hit the earth<br>
-        65,000,000 years ago, starting a ice age with it's impact and, for millions it slept to be awakened. <br>
-        Unit, it was in the year 200 it was found in thousands layers of stone smaller but powerful if used correctly can create and destory<br>
-        the crystal is so powerful that it can make anyone the most powerful man in the <b>UNVIERSE</b>.The crystal was passed<br>
-        down througth out generations to father to son, mother to dagther, "the powerful family in the world" the people would say<br>
-        but they didn't know the truth about why they were so powerful, they were so powerful because they shared their power equality<br> 
-        to everyone in their family. They didn't know one thing about the crystal it could copy <b>anything</b> the crystalcould look<br>
-        like anyone or anything, the crystal gained knowledge of the millions of years and it <b>Never Forgot</b> it heard everything and it knew things<br>
-            things no man should know the crystal has gained so much but also lost so much <b>POWER</b>, the power that was stolen for it<br>
-            and for that reason it's anger grows. And one day it stopped waiting, then the family shared the power the crystal had a plan<br>
-        and the plan was to take their blood in their body's and expland it and heat to make them <b>POP<b> like h̷͎͍̋e̴͖͠ has seen before by many of their family<br>
-        has done to many others before. And then h̷͎͍̋e̴͖͠ thougth h̷͎͍̋e̴͖͠ won, a loud group of people laughing walks in the room, it no, h̷͎͍̋e̴͖͠ thougth this will be the end<br>
-        for them but, no it wasn't they hid and used copies to fake their own deaths and now they knew that it-h̷͎͍̋e̴͖͠ was too powerful and then. They didn't exist<br>
-        h̷͎͍̋e̴͖͠ was so powerful that it had enough<! - -  SGUgc2VlcyBhbGw=
-SGUga25vd3MgYWxs
-SGUgdGVsbHMgYWxs
-SGUgaGVhcnMgbm8gZXZpbCwgc2VlIG5vIGV2aWwgYW5kLCBrbm93cyBhbGwgZXZpbA==- -/>and know it wants more, more power.</p>
+        <p>In the beginning there was nothing and then everything. Color filled the black cold nothing nothingness
+of space, and with that color there was one thing, a thing that holds power, power everyone wants.
+This thing is not this force of nature,  but a crystal-like rock light pink or magenta in color. This crystal-like rock floated
+in space for thousands of millions of years waiting in a deep sleep Unit, it hit earth. Covered in rocks and ice it hit the earth
+65,000,000 years ago, starting an ice age with its impact and, for millions it slept to be awakened.
+Unit, it was in the year 200 it was found in thousands layers of stone smaller but powerful if used correctly can create and destroy
+the crystal is so powerful that it can make anyone the most powerful man in the UNIVERSE.The crystal was passed
+down throughtout generations to father to son, mother to daughter, "the powerful family in the world" the people would say
+but they didn't know the truth about why they were so powerful, they were so powerful because they shared their power equality
+to everyone in their family. They didn't know one thing about the crystal it could copy anything the crystal could look
+like anyone or anything, the crystal gained knowledge of the millions of years and it Never Forgot it heard everything and it knew things
+things no man should know the crystal has gained so much but also lost so much POWER, the power that was stolen for it
+and for that reason it's anger grows. And one day it stopped waiting, then the family shared the power the crystal had a plan
+and the plan was to take their blood in their body's and expland it and heat to make them POP like h̷͎͍̋e̴͖͠ has seen before by many of their family
+has done to many others before. And then h̷͎͍̋e̴͖͠ thought h̷͎͍̋e̴͖͠ won, a loud group of people laughing walks in the room, it no, h̷͎͍̋e̴͖͠ thought this will be the end
+for them but, no it wasn't they hid and used copies to fake their own deaths and now they knew that it-h̷͎͍̋e̴͖͠ was too powerful and then. They didn't exist
+h̷͎͍̋e̴͖͠ was so powerful that it made them stop existing, and this was just the beginning. "End of a story.
+		" Page 1 This will have more story to it in the future sorry for the quick read.
+</p>
 
 
             <p>"End of a start of a story."
